# n-times-two-squares

./: .gitignore  CMakeLists.txt  README.md  build.sh
v1/: main.cpp  setup.sh
v2/: Popup.hh  build.sh  config.hh  main.cpp  setup.sh
